Bug 605077 - fix loop condition in CheckFrameOptions to check for top non-system docshell, r=jst, a=jst